--- a/Data/UI.ui
+++ b/Data/UI.ui
@@ -175,8 +175,7 @@
              <string/>
             </property>
             <property name="icon">
-             <iconset theme="undo">
-              <normaloff>../../../.designer/backup</normaloff>../../../.designer/backup</iconset>
+             <iconset theme="edit-undo"/>
             </property>
            </widget>
           </item>
@@ -197,8 +196,7 @@
              <string/>
             </property>
             <property name="icon">
-             <iconset theme="redo">
-              <normaloff>../../../.designer/backup</normaloff>../../../.designer/backup</iconset>
+             <iconset theme="edit-redo"/>
             </property>
            </widget>
           </item>
