--- a/Data/UI.ui
+++ b/Data/UI.ui
@@ -254,6 +254,9 @@
           <property name="showGrid">
            <bool>true</bool>
           </property>
+          <attribute name="horizontalHeaderMinimumSectionSize">
+           <number>20</number>
+          </attribute>
           <attribute name="horizontalHeaderDefaultSectionSize">
            <number>100</number>
           </attribute>
@@ -261,7 +264,7 @@
            <bool>true</bool>
           </attribute>
           <attribute name="verticalHeaderStretchLastSection">
-           <bool>true</bool>
+           <bool>false</bool>
           </attribute>
           <column>
            <property name="text">
