--- a/Data/UI.ui
+++ b/Data/UI.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>ISChess</string>
   </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>assets/icon.png</normaloff>assets/icon.png</iconset>
+  </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
     <widget class="QGraphicsView" name="chessboardView">
